--- a/app_styles.css
+++ b/app_styles.css
@@ -187,7 +187,7 @@ _:-ms-input-placeholder, :root .demo-graph {
 }
 .demo-updates .mdl-card__title {
   min-height: 200px;
-  background-image: url('images/dog.png');
+  background-image: url('');
   background-position: 90% 100%;
   background-repeat: no-repeat;
 }
@@ -221,6 +221,53 @@ _:-ms-input-placeholder, :root .demo-graph {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.cardIcon{
+  
+  display: block;
+  height: 50%; 
+
+  margin-left: auto; 
+  margin-right: auto;
+  
+}
+
+
+
+.mdl-card__menu{
+  
+  display: block;
+  
+
+}
+
+.mdl-layout__header-row {
+  
+  padding-left: 60px !important;
+}
+
+.mdl-card__title{
+ 
+  max-width: 90%;
+}
+
+.mdl-card__media{
+  
+  background-color: rgba(255, 0, 0, 0);
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+}
+
+h4 {
+  
+  margin-top: 8px;
+}
+
+.mdl-card--expand {
+  
+  max-width: 100% !important;
 }
 
 
