--- a/app_styles.css
+++ b/app_styles.css
@@ -223,4 +223,51 @@ _:-ms-input-placeholder, :root .demo-graph {
           align-items: center;
 }
 
+.cardIcon{
+  
+  display: block;
+  height: 50%; 
+
+  margin-left: auto; 
+  margin-right: auto;
+  
+}
+
+
+
+.mdl-card__menu{
+  
+  display: block;
+  
+
+}
+
+.mdl-layout__header-row {
+  
+  padding-left: 60px !important;
+}
+
+.mdl-card__title{
+ 
+  max-width: 90%;
+}
+
+.mdl-card__media{
+  
+  background-color: rgba(255, 0, 0, 0);
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+}
+
+h4 {
+  
+  margin-top: 8px;
+}
+
+.mdl-card--expand {
+  
+  max-width: 100% !important;
+}
+
 
